--- a/sass/circle/components/_containers.sass
+++ b/sass/circle/components/_containers.sass
@@ -7,6 +7,8 @@
       padding: 0 15px
       vertical-align: middle
       box-sizing: border-box
+      @media screen and (max-width: $tablet-breakpoint)
+        padding: 0
       input
         margin: 0
       .button
